--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -12,6 +12,8 @@
 @use 'ingredientsSearch.scss';
 @use 'collectionsPage.scss';
 @use 'collectionDetailPage.scss';
+@use 'notFoundPage.scss';
+@use 'categoryCuisineListPage.scss';
 
 * {
     margin: 0;
